<resources>
    <string name="app_name">Minerva</string>

    <!-- Common -->
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>

    <!-- Login (Main) Activity   -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="title_activity_bike_map">BikeMapActivity</string>
    <string name="label_log_in_action">Log in</string>
    <string name="label_or">or</string>
    <string name="continue_as_guest">Continue as Guest</string>

    <!-- Home Fragment -->
    <string name="upcoming_events">Upcoming Events</string>
    <string name="upcoming_events_desc">Below you will find events organized by organizations, universities, and bike clubs.</string>

    <!-- Map Fragment -->
    <string name="bike_parked_here">Bike Parked Here</string>
    <string name="remove_parked_here">Remove Parked Location</string>
    <string name="start_recording">Start Recording</string>

    <!-- Shared Preference -->
    <string name="shared_preference_key">shared_preference_key</string>

    <!-- Project 529 Activity -->
    <string name="project_529_logo_desc">Project 529 logo</string>
    <string name="cta1">Did you register your bike?</string>
    <string name="cta2">Only takes 5 minutes!</string>
    <string name="project_529_desc">By registering your bike with Project 529, you can notify Project 529\'s online community of law enforcement agencies, universities, bike clubs, and more of your stolen bike.</string>
    <string name="label_later">I\'ll do it later</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_core">CoreActivity</string>

    <!-- Profile Fragment-->
    <string-array name="user_data_titles">
        <item>My Bike</item>
        <item>Routes</item>
        <item>Favourites</item>
        <item>Statistics</item>
    </string-array>
    <string name="statistics">Statistics</string>
    <string name="favourite_locations">Favourite Locations</string>
    <string name="routes">Routes</string>
    <string name="my_bikes">My Bikes</string>
    <string name="current_bike_stats">Current Bike Stats</string>
    <string name="all_time_stats">All Time Stats</string>
    <string name="desc_profile_picture">Profile Picture</string>
    <string name="dummy_name">John Doe</string>
    <string name="unknown">N/A</string>
    <string name="add_to_calendar">Add To Calendar</string>

    <!-- Edit Profile Activity -->
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="weight_lb">Weight (lb)</string>
    <string name="province">Province</string>
    <string name="athlete_information">Athlete Information</string>
    <string name="account_details">Account Details</string>
    <string name="athlete_information_help">Used to calculate calories</string>
    <string name="none_selected">None Selected</string>
    <string name="prefer_not_to_say">Prefer Not To Say</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string-array name="units_of_measure">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="units_of_weight">
        <item>Kg</item>
        <item>Lbs</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="change_background">Change Background</string>

</resources>