<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.EditProfileActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.Toolbar"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/save"
            style="@style/Widget.MaterialComponents.Button"
            />

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/edit_image_profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:shapeAppearanceOverlay="@style/circleImageView"
        tools:srcCompat="@drawable/default_profile_picture"
        app:srcCompat="@drawable/default_profile_picture"
        android:contentDescription="@string/desc_profile_picture" />

</LinearLayout>