<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_grey"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                >

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_profile_picture"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    app:shapeAppearanceOverlay="@style/circleImageView"
                    tools:srcCompat="@drawable/default_profile_picture"
                    app:srcCompat="@drawable/default_profile_picture"
                    android:contentDescription="@string/desc_profile_picture" />

                <TextView
                    android:id="@+id/text_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/raisin_black"
                    android:text="@string/dummy_name"/>

                <Button
                    android:id="@+id/button_edit"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="72dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:text="@string/edit"
                    android:textSize="11sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:text="@string/all_time_stats"
                    android:textSize="18dp"
                    android:textColor="@color/raisin_black"
                    android:textStyle="bold"
                    android:paddingBottom="16dp"
                    />

                <TextView
                    android:id="@+id/textTotalDistanceStat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total Distance:"
                    android:paddingBottom="6dp"/>

                <TextView
                    android:id="@+id/textAverageSpeedStat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Average Speed:"
                    android:paddingBottom="6dp"/>

                <TextView
                    android:id="@+id/textTopSpeedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Top Speed:"
                    android:paddingBottom="6dp"/>

                <TextView
                    android:id="@+id/textTotalCaloriesBurned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total Calories Burned:"
                    android:paddingBottom="6dp"/>

                <TextView
                    android:id="@+id/textPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Biking Points:" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_settings"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:background="@color/white"
            android:textColor="@color/black"
            android:text="@string/settings" />

        <TextView
            android:id="@+id/text_logout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:background="@color/white"
            android:textColor="@color/red_vermilion"
            android:text="@string/log_out"
            />

    </LinearLayout>

</ScrollView>