<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:id="@+id/container"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#4B000000"
        android:layout_marginBottom="15dp"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tvWeekday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
            <ImageView
                android:id="@+id/ivWeatherIcon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:scaleType="fitEnd"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/weather_unknown" />
            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="13dp">
            <TextView
                android:id="@+id/tvFullDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:textColor="@android:color/white"
                android:text="@string/unknown" />
            <TextView
                android:id="@+id/tvCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textAlignment="textEnd"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:text="@string/unknown"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_background"
            android:layout_marginBottom="5dp"
            android:id="@+id/btnChangeBackground"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4B000000"
        android:orientation="vertical">

        <TextView+
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/upcoming_events"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            >

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:layout_marginBottom="14dp"
            android:text="@string/upcoming_events_desc"
            />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/transparent"
            android:dividerHeight="14dp"
            android:id="@+id/listview"
            >
        </ListView>
    </LinearLayout>
</LinearLayout>